--- a/style.css
+++ b/style.css
@@ -1,26 +1,11 @@
-h1 {
-    color: black;
-    transition: color 1.0s;
-}
-h1:hover {
-    color: red;
-}
-
-div.pics {
+div.flex {
     display: flex;
     flex-direction: column;
-    text-align: center;
+    align-items: center;
 }
 
 img {
-    /* Prevent horizontal stretching*/
-    align-self: center;
-    height: 80vh;
+    height: 90vh;
     width: auto;
-    border: 1px solid black;
-    transition: height 1.0s;
-}
-
-img:hover {
-    height: 90vh
+    max-width: 100vw;
 }
