--- a/style.css
+++ b/style.css
@@ -4,8 +4,31 @@ div.flex {
     align-items: center;
 }
 
+div.flex_menu {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
 img {
     height: 90vh;
     width: auto;
     max-width: 100vw;
+    padding: 10px;
+}
+
+a {
+    color: black;
+    text-decoration: none;
+}
+
+a:visited { color: black; }
+
+h1,h2 {
+    padding: 10px;
+    transition: color 1.0s;
+}
+
+h1:hover, h2:hover {
+    color: red;
 }
