--- a/style.css
+++ b/style.css
@@ -24,11 +24,12 @@ a {
 
 a:visited { color: black; }
 
-h1,h2 {
+h1, h2, h3 {
     padding: 10px;
-    transition: color 1.0s;
+    transition: color 1.0s, letter-spacing 1.0s;
 }
 
-h1:hover, h2:hover {
+h1:hover, h2:hover, h3:hover {
     color: red;
+    letter-spacing: 10px; 
 }
